[gd_scene load_steps=20 format=3 uid="uid://dha6iyg1dtksr"]

[ext_resource type="Script" path="res://Scripts/DificultadOracion.gd" id="1_6bl7g"]
[ext_resource type="Texture2D" uid="uid://bjc011wiwmvcv" path="res://Sprites/Background_game.jpg" id="2_esg6a"]
[ext_resource type="Texture2D" uid="uid://lprcmn3axhu2" path="res://Sprites/istockphoto-1133408808-612x612-removebg-preview 1.png" id="3_0vb56"]
[ext_resource type="Texture2D" uid="uid://c862v6ar4xge" path="res://Sprites/fondo-de-papel-del-vintage-aislado-128788522-transformed__1_-removebg-preview 1.png" id="4_b2h6a"]
[ext_resource type="Texture2D" uid="uid://biihx571xca82" path="res://Sprites/flechas__1_-removebg-preview 1.png" id="5_hbrye"]
[ext_resource type="Texture2D" uid="uid://n6wcrj6c6wn" path="res://Sprites/Group 79.png" id="6_lltdr"]
[ext_resource type="Texture2D" uid="uid://cc2sgfy0jlgc6" path="res://Sprites/Group 78.png" id="7_sr6wo"]
[ext_resource type="Texture2D" uid="uid://dl4sxt4qek2mr" path="res://Sprites/Group 75.png" id="8_sjogs"]
[ext_resource type="Texture2D" uid="uid://cpgtso7quhpj8" path="res://Sprites/pngtree-padlocks-or-lock-open-and-closed-icons-isolated-transparant-png-image_5213443.png" id="9_e2vae"]
[ext_resource type="Script" path="res://Scripts/AnimationPlayer.gd" id="10_2wl8o"]
[ext_resource type="Script" path="res://Scripts/Button4.gd" id="11_riha7"]
[ext_resource type="Script" path="res://Scripts/AnimationPlayer1.gd" id="12_825iu"]
[ext_resource type="StyleBox" uid="uid://brdljhusel8uq" path="res://styles/btn_go_back_normal.tres" id="13_w8vyi"]
[ext_resource type="StyleBox" uid="uid://du12ncuctqjhb" path="res://styles/btn_go_back_hover.tres" id="14_pgphj"]
[ext_resource type="StyleBox" uid="uid://by2vml721igto" path="res://styles/btn_go_back_pressed.tres" id="15_8kai4"]

[sub_resource type="Animation" id="Animation_aggsv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../Button4/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lrwm3"]
resource_name = "Unlock"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(28, 0), Vector2(28, -55.19)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.0313726)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3t862"]
_data = {
"RESET": SubResource("Animation_aggsv"),
"Unlock": SubResource("Animation_lrwm3")
}

[sub_resource type="LabelSettings" id="LabelSettings_hiw6i"]
font_size = 50
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6bl7g")
metadata/_edit_vertical_guides_ = [605.0, 1061.0]
metadata/_edit_horizontal_guides_ = [-100.0, 115.0, 663.0]

[node name="Node2D2" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Node2D2"]
position = Vector2(637, 374)
scale = Vector2(0.89477, 0.836735)
texture = ExtResource("2_esg6a")

[node name="Node2D" type="Node2D" parent="."]

[node name="Cartelera" type="Sprite2D" parent="Node2D"]
position = Vector2(640, 360)
scale = Vector2(0.89, 0.89)
texture = ExtResource("3_0vb56")

[node name="Fondo-de-papel-del-vintage-aislado-128788522-transformed1-removebg-preview1" type="Sprite2D" parent="."]
position = Vector2(650, 389)
scale = Vector2(0.811321, 0.971897)
texture = ExtResource("4_b2h6a")

[node name="Flecha derecha" type="Sprite2D" parent="."]
position = Vector2(1024, 389)
scale = Vector2(0.78, 0.78)
texture = ExtResource("5_hbrye")

[node name="Flecha izquierda" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.411765)
position = Vector2(276, 389)
scale = Vector2(0.78, 0.78)
texture = ExtResource("5_hbrye")
flip_h = true

[node name="Rectangle16" type="Sprite2D" parent="."]
position = Vector2(850, 389)
scale = Vector2(1.19715, 1.19715)
texture = ExtResource("6_lltdr")

[node name="Rectangle17" type="Sprite2D" parent="."]
position = Vector2(650, 389)
scale = Vector2(1.19715, 1.19715)
texture = ExtResource("7_sr6wo")

[node name="Rectangle18" type="Sprite2D" parent="."]
position = Vector2(450, 389)
scale = Vector2(1.19715, 1.19715)
texture = ExtResource("8_sjogs")

[node name="Button" type="Button" parent="."]
offset_left = 359.0
offset_top = 314.0
offset_right = 544.0
offset_bottom = 463.0
flat = true

[node name="Button3" type="Button" parent="."]
offset_left = 558.0
offset_top = 315.0
offset_right = 742.0
offset_bottom = 463.0
flat = true

[node name="Sprite2D3" type="Sprite2D" parent="Button3"]
position = Vector2(78, 60)
scale = Vector2(0.622222, 0.622222)
texture = ExtResource("9_e2vae")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button3/Sprite2D3"]
libraries = {
"": SubResource("AnimationLibrary_3t862")
}
script = ExtResource("10_2wl8o")

[node name="Button4" type="Button" parent="."]
offset_left = 758.0
offset_top = 315.0
offset_right = 941.0
offset_bottom = 464.0
flat = true
script = ExtResource("11_riha7")

[node name="Sprite2D" type="Sprite2D" parent="Button4"]
position = Vector2(78, 63)
scale = Vector2(0.622222, 0.622222)
texture = ExtResource("9_e2vae")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button4/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_3t862")
}
script = ExtResource("12_825iu")

[node name="Label" type="Label" parent="."]
offset_left = 485.0
offset_top = 24.0
offset_right = 817.0
offset_bottom = 165.0
text = "SELECCIONAR
NIVEL"
label_settings = SubResource("LabelSettings_hiw6i")
horizontal_alignment = 1

[node name="btn_go_back" type="Button" parent="."]
offset_left = 18.0
offset_top = 21.0
offset_right = 72.0
offset_bottom = 77.0
theme_override_styles/normal = ExtResource("13_w8vyi")
theme_override_styles/hover = ExtResource("14_pgphj")
theme_override_styles/pressed = ExtResource("15_8kai4")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="Button3/Sprite2D3/AnimationPlayer" method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="Button4/Sprite2D/AnimationPlayer" method="_on_button_4_pressed"]
[connection signal="pressed" from="btn_go_back" to="." method="_on_btn_go_back_pressed"]
